<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.openkm</groupId>
  <artifactId>gadmilagro-parent</artifactId>
  <version>2.11-DEV</version>
  <packaging>pom</packaging>


  <licenses>
    <license>
      <name>OpenKM End User License Agreement</name>
      <url>http://docs.openkm.com/kcenter/view/licenses/eula-openkm-end-user-agreement.html</url>
      <comments>Commercial license</comments>
    </license>
  </licenses>

  <organization>
    <name>OpenKM Knowledge Management System S.L.</name>
    <url>http://www.openkm.com</url>
  </organization>

  <developers>
    <developer>
      <id>monkiki</id>
      <name>Paco Avila</name>
      <email>monkiki@gmail.com</email>
      <url>http://monkiki.org</url>
      <timezone>+1</timezone>
      <roles>
        <role>manager</role>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>darkman97</id>
      <name>Josep Llort</name>
      <email>jlltella@gmail.com</email>
      <timezone>+1</timezone>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <sdk4j.version>4.9</sdk4j.version>
    <openkm.version>8.1.12</openkm.version>

    <!-- Compiler properties -->
    <java.version>11</java.version>
    <java.compiler>11</java.compiler>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>openkm.com</id>
      <name>OpenKM Maven Repository</name>
      <url>https://maven.openkm.com</url>
    </repository>
  </repositories>

 <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.5.RELEASE</version>
  </parent>

  <dependencies>
  </dependencies>

  <modules>
    <module>plugins</module>
    <module>web</module>
  </modules>

</project>
